--- a/src/assets/styles/base/_utils.scss
+++ b/src/assets/styles/base/_utils.scss
@@ -2,3 +2,18 @@
   width: 100%;
   height: 100%;
 }
+
+.visible {
+  visibility: visible;
+  transform: scale(1);
+}
+
+.hidden {
+  visibility: hidden;
+  transform: scale(0);
+  height: 0;
+}
+
+.transition-all {
+  transition: All 0.2s ease-in;
+}
