Created slider component with initial props

--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -3,5 +3,6 @@
 
 body {
   background-color: #dddddd;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  line-height: 24px;
 }
