--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,3 +1,4 @@
 @import './base/base';
 @import './layout/layout';
-@import './mixins/mixins'
+@import './mixins/mixins';
+@import './components/components';
