--- a/src/assets/styles/layout/_grid.scss
+++ b/src/assets/styles/layout/_grid.scss
@@ -6,6 +6,7 @@ $device-mobile-xs: 576px;
 .container {
   padding: 16px;
   margin: 0 auto;
+  box-sizing: border-box;
 
   @media (min-width: $device-desktop-lg) {
     width: 1200px;
@@ -16,9 +17,9 @@ $device-mobile-xs: 576px;
   }
 
   @media screen and (max-width: $device-mobile-lg) {
-    width: 100vw;
+    width: 100%;
     margin: 0;
-    padding: 0;
+    padding: 16px;
   }
 }
 
