Updated tests and components

--- a/src/assets/styles/layout/_grid.scss
+++ b/src/assets/styles/layout/_grid.scss
@@ -42,6 +42,11 @@ $device-mobile-xs: 576px;
   align-items: flex-end;
 }
 
+.flex-content-evenly {
+  @extend .flex;
+  justify-content: space-evenly;
+}
+
 .relative {
   position: relative;
 }
